<resources>
    <string name="app_name">mi_nevera_app</string>
    <string-array name="sistemIngredients">
        <item>macarrones</item>
        <item>salsa de tomate</item>
        <item>arroz</item>
        <item>manzana</item>
        <item>huevo</item>
    </string-array>
    <string name="bt_search">buscar</string>
    <string name="swVegan">Solo recetas veganas</string>

    <!--Strings from insert recipe activity -->
    <string name="tvInsertName">Insertar nombre de receta</string>
    <string name="tvInsertIngeredients">Que ingredientes necesita?</string>
    <string name="tvIsVegan">Es vegana?</string>
    <string name="tvDifficulty">Elige dificultad</string>
    <string name="tvTime">Introduce la duración</string>
    <string name="etRecipeName">tu receta</string>
    <string name="actvEntry">Ingredientes</string>
    <string name="btAdd">Añadir</string>
    <string name="btAddRecipe">Añadir receta</string>
    <string-array name="difficultyItems">
        <item>fácil</item>
        <item>media</item>
        <item>dificil</item>
    </string-array>

    <!--Strings for setting activity-->
    <string name="tvDarkMode">Activar modo oscuro</string>
    <string name="tvChoseActivity">Elige tu pantalla principal</string>
    <string name="btBack">Volver atras</string>
    <string-array name="ActivityItems">
        <item>-- Elige pantalla principal --</item>
        <item>Mis Ingredientes</item>
        <item>Receta rapida</item>
        <item>Lista de la compra</item>
        <item>Introducir receta</item>
    </string-array>


    <string-array name="TimeItems">
        <item>30 minutos</item>
        <item>45 minutos</item>
        <item>1 hora</item>
        <item>1.5 horas</item>
        <item>Sin limite</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>